# Chirpy

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
src/ChirpyUI/: CMakeLists.txt  ChirpyUI.sll  ChirpyUI.spj  ChirpyUI_events.py  filelist.txt  ui.c  ui.h  ui_AvatarMenu.c  ui_AvatarMenu.h  ui_AvatarScreen.c  ui_EmergencyMenu.c  ui_GroupsMenu.c  ui_GroupsMenu.h  ui_GroupsScreen.c  ui_MainScreen.c  ui_MessagesMenu.c  ui_MessagesMenu.h  ui_PhoneConnectScreen.c  ui_PhoneConnectScreen.h  ui_PhoneQRMenu.c  ui_PhoneQRMenu.h  ui_comp_hook.c  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_avatar_png.c  ui_img_checkmark_png.c  ui_img_emergency_png.c  ui_img_emojismsg_png.c  ui_img_groups_png.c  ui_img_homebg_png.c  ui_img_messagepanel_png.c  ui_img_phoneconnect_png.c  ui_img_whitepanel_png.c
src/ChirpyUI/assets/: UI.psd  profiles2
src/ChirpyUI/components/: ui_comp_hook.c
src/ChirpyUI/images/: ui_img_avatar_png.c  ui_img_avatarselection_png.c  ui_img_celebrationemoji_png.c  ui_img_checkmark_png.c  ui_img_emergency_png.c  ui_img_emergencyemoji_png.c  ui_img_emicon_png.c  ui_img_emojismsg_png.c  ui_img_froggy_png.c  ui_img_groups_png.c  ui_img_grselection_png.c  ui_img_heartemoji_png.c  ui_img_homebg_png.c  ui_img_horizontalnav_png.c  ui_img_horizontalnnavother_png.c  ui_img_horsy_png.c  ui_img_kitty_png.c  ui_img_likeemoji_png.c  ui_img_lizzy_png.c  ui_img_mainpanel_png.c  ui_img_messagepanel_png.c  ui_img_pandy_png.c  ui_img_phoeny_png.c  ui_img_phoneconnect_png.c  ui_img_phoneconnectselection_png.c  ui_img_piggy_png.c  ui_img_profiles2_png.c  ui_img_profiles_png.c  ui_img_puppy_png.c  ui_img_scroller_png.c  ui_img_selected_png.c  ui_img_settings_png.c  ui_img_settingsselection_png.c  ui_img_ui_png.c  ui_img_waveemoji_png.c  ui_img_whitepanel_png.c
src/ChirpyUI/screens/: ui_AvatarMenu.c  ui_AvatarMenu.h  ui_AvatarScreen.c  ui_AvatarScreen.h  (+21 more)
(+33 files in other folders)
